LWCLearnwithFLOWOrg/force-app/main/default/objects/Pod__c/Pod__c.object-meta.xml
<CustomObject>
    <label>Pod</label>
    <nameField>
        <label>Pods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>