LWCLearnwithFLOWOrg/force-app/main/default/objects/Pod__c/fields/Integration_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Integration_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pods7</relationshipName>
    <type>Lookup</type>
</CustomField>