LWCLearnwithFLOWOrg/force-app/main/default/objects/Pod__c/fields/Team_Lead_Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead, Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pods1</relationshipName>
    <type>Lookup</type>
</CustomField>