LWCLearnwithFLOWOrg/force-app/main/default/objects/Pod__c/listViews/All_Pods.listView-meta.xml
<ListView>
    <fullName>All_Pods</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Pods</label>
</ListView>